--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Softwell S.R.L.</title>
+		<title>CyberSoft S.A.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="./images/slack_new_50px.png" alt="" /></span>
-							<h1 id="title">Softwell S.R.L.</h1>
+							<h1 id="title">CyberSoft <S class="A"></S></h1>
 							<p>Desarrollo de Software</p>
 						</div>
 
@@ -56,7 +56,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong>Softwell S.R.L.</strong></h2>
+								<h2 class="alt"><strong>CyberSoft S.A.</strong></h2>
 								<h4 class="sub-title">"Diseñar la excelencia"</h4>
 								<p>Somos una empresa de tecnología fundada en el año 2021
 									con la visión de disminuir la brecha tecnológica en las
@@ -85,7 +85,7 @@
 							<header>
 								<h2>Historial de la empresa</h2>
 							</header>
-							<p>Softwell S.R.L. es una empresa desarrolladora de software y consultoría informática, basados tanto en tecnologías Web como tradicionales. Nuestras principales áreas de aplicación son: desarrollos de sistemas a medida, sitios Web, e-Commerce, Email Marketing, portales, alojamiento de sitios, administración de base de datos, instalación y operación de servidores, seguridad informática, consultaría en redes, etc.</p>
+							<p>CyberSoft S.A. es una empresa desarrolladora de software y consultoría informática, basados tanto en tecnologías Web como tradicionales. Nuestras principales áreas de aplicación son: desarrollos de sistemas a medida, sitios Web, e-Commerce, Email Marketing, portales, alojamiento de sitios, administración de base de datos, instalación y operación de servidores, seguridad informática, consultaría en redes, etc.</p>
 
 							<div class="column">
 								<div class="col-4 col-12-mobile">
@@ -211,11 +211,11 @@
 								</div>
 							</div>
 
-							<p>En Softwell S.R.L. te recibimos con los brazos abiertos, contactanos por cualquier consulta.
+							<p>En CyberSoft S.A. te recibimos con los brazos abiertos, contactanos por cualquier consulta.
 								Nuestra recepcionista se comunicará en la brevedad.
 							</p>
 
-							<form method="post" action="javascript:alert('¡Gracias por comunicarte con Softwell S.R.L.!');">
+							<form method="post" action="javascript:alert('¡Gracias por comunicarte con CyberSoft S.A.!');">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Nombre" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Apellido" /></div>
@@ -239,7 +239,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Administración V. All rights reserved.</li><li>Design: <a href="https://github.com/sergiomelgarejo">Sergio Melgarejo</a></li>
+						<li>&copy; E-Bussiness. All rights reserved.</li><li>Design: <a href="https://github.com/sergiomelgarejo">Sergio Melgarejo</a></li>
 					</ul>
 
 			</div>
