--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; E-Bussiness3. All rights reserved.</li><li>Design: <a href="https://github.com/FabricioRuizDiaz">Fabricio Ruiz Diaz</a></li>
+						<li>&copy; E-Bussiness. All rights reserved.</li><li>Design: <a href="https://github.com/FabricioRuizDiaz">Fabricio Ruiz Diaz</a></li>
 					</ul>
 
 			</div>
